# ai-travel-planner-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  package.json
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_placeholder.py  0002_users_trips.py  0003_flights_hotels.py  0004_documents.py  0005_itinerary_agent.py  0006_emails_audit.py  0007_email_sent.py  0008_traveler_profiles.py
apps/api/app/: __init__.py  main.py
apps/api/app/adapters/: __init__.py  embeddings.py  redis_client.py
apps/api/app/adapters/db/: __init__.py  base.py  models.py  repositories.py  session.py
apps/api/app/agent/: __init__.py  eval_harness.py  runner.py  tool_schemas.py  tools.py
apps/api/app/api/: __init__.py  middleware.py
apps/api/app/core/: auth.py  clerk_auth.py  config.py  logging.py
apps/api/app/domain/: __init__.py  calendar.py  chat_parse.py  crypto.py  documents.py  email.py  guardrails.py  itinerary.py  profile.py  travel.py  trip.py
apps/api/app/services/: __init__.py  activity_service.py  calendar_service.py  document_service.py  email_service.py  itinerary_service.py  profile_service.py  travel_service.py  trip_service.py
apps/api/scripts/: entrypoint.py
apps/api/tests/: test_agent_eval.py  test_budget.py  test_calendar_domain.py  test_chat_parse.py  test_config.py  test_crypto.py  test_documents_domain.py  test_email_domain.py  test_embeddings.py  test_guardrails.py  test_health.py  test_mock_providers.py  test_pdf_parser.py  test_profile_domain.py  test_trip_domain.py
(+81 files in other folders)
