[project]
name = "ai-travel-planner-api"
version = "0.1.0"
description = "AI Travel Planner Assistant API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "redis>=5.2.0",
  "boto3>=1.35.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.17",
  "structlog>=24.4.0",
  "PyJWT[crypto]>=2.10.0",
  "pymupdf>=1.25.0",
  "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "types-redis>=4.6.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "."
packages = ["app"]

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "jwt.*", "fitz"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=40"

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*"]
